--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -5,7 +5,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
         <div class="container-fluid">
             <div class="btn-group">
                 <img src="{{ url_for('static', filename='assets/ncs_logo.png') }}" width="50" height="50" class="d-inline-block align-center" alt="">
-                <a class="navbar-brand" href="https://csp.nighthawkcodingsociety.com/">{{basename}}</a>
+                <a class="navbar-brand" href="https://kiruthic-selvakumar.github.io/travel_frontend/">InterTravel</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
