--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -20,6 +20,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
                         <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
                             <li><a class="dropdown-item" href={{ url_for('utable') }}>User Management</a></li>
                             <li><a class="dropdown-item" href={{ url_for('u2table') }}>User Management 2</a></li>
+                            <li><a class="dropdown-item" href={{ url_for('budget_table') }}>Budget Management</a></li>
                         </ul>
                     </div>
                 </div>
