--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
         <div class="row">
             <div class="col-4">
                 <div class="card">
-                    <img class="card-img-top" src="{{ url_for('static', filename='assets/airplane.jpg') }}" alt="Python Development" height="250">
+                    <img class="card-img-top" src="{{ url_for('static', filename='assets/airplane.jpg') }}" alt="Python Development" height="350">
                     <div class="card-body">
                     <h5 class="card-title">What are the features of <mark>InterTravel?</mark>?</h5>
                     <p class="card-text">
@@ -22,41 +22,46 @@
                             <li>Budget Brilliance</li>
                         </ol>
                     </p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <a class="btn btn-primary" href="https://kiruthic-selvakumar.github.io/travel_frontend/">Check them out!</a>
                     </div>
                 </div>
             </div>
             <div class="col-4">
                 <div class="card">
-                    <img class="card-img-top" src="{{ url_for('static', filename='assets/flask.png') }}" alt="Flask Development" height="250">
+                    <img class="card-img-top" src="{{ url_for('static', filename='assets/traveler.jpg') }}" alt="Flask Development" height="350">
                     <div class="card-body">
-                    <h5 class="card-title">What is <mark>Flask</mark>? How do I start Web development?</h5>
+                    <h5 class="card-title">Where can I find more about <mark>InterTravel</mark>?</h5>
                     <p class="card-text">
-                        <ol>
-                            <li>Flask Framework is the popular Web Application development framework of Python.</li>
-                            <li>Blueprint is Python technique to help abstract complexity, moving information into independent files and directories. Blueprints are intended to encapsulate feature-sized sections of our application into well organized files.</li>
-                            <li>HTML using Bootstrap is a great way to build interesting pages and reduce CSS</li>
-                            <li>Jinja2 is a server-side Python like template engine, supports HTML5 web development, and provides full integration with Flask.</li>
-                        </ol>
-                    </p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                        InterTravel branched off Flocker, a social media website designed last trimester. Intertravel's purpose is to make international travel procedures simpler and more accessible. To provide users with a detailed and user-friendly tool that offers insights into various elements of planning travel or vacation, including destination activities, food, hotels, transportation, budget, packing, and healthcare, enabling them to make informed decisions.
+
+                        Below are links to our backend and frontend repositories, along with our Kanban board for project management.<br><br>
+                        
+                        <strong>Here is our Backend Repository:</strong> <a href="https://github.com/Kiruthic-Selvakumar/travel_backend" target="_blank">GitHub Backend Repo</a><br><br>
+                        
+                        <strong>Here is our Frontend Repository:</strong> <a href="https://github.com/Kiruthic-Selvakumar/travel_frontend" target="_blank">GitHub Frontend Repo</a><br><br>
+                        
+                        <strong>Here is our Kanban Board where we documented our development process:</strong> <a href="https://github.com/users/Kiruthic-Selvakumar/projects/2" target="_blank">Project Kanban Board</a><br><br>
+                    </p>                    
+                    <a class="btn btn-primary" href="https://kiruthic-selvakumar.github.io/travel_frontend/">Check the final website out!</a>
                     </div>
                 </div>
             </div>
             <div class="col-4">
                 <div class="card">
-                    <img class="card-img-top" src="{{ url_for('static', filename='assets/pythondb.png') }}" alt="Backend and Persistence" height="250">
+                    <img class="card-img-top" src="{{ url_for('static', filename='assets/hotel.jpg') }}" alt="Backend and Persistence" height="350">
                     <div class="card-body">
-                    <h5 class="card-title">How do you manage <mark>Persistent data</mark> with Python?</h5>
+                    <h5 class="card-title">Who created <mark>Intertravel</mark>?</h5>
                     <p class="card-text">
-                        <ol>
-                            <li>A Database is an example of persistent data that is held on a computer.  Programming languages and frameworks allow you to store and retrive data.</li>
-                            <li>SQL stands for Structured Query Language · SQL lets you access and manipulate databases and has become a long lasting development standard.</li>
-                            <li>SQLAlchemy is the Python SQL toolkit and Object Relational Mapper (ORM) that gives application developers the full power and flexibility of SQL.</li>
-                            <li>There are many newer and sometimes easier Database languages and frameworks.  Mongo, DynamoDB, Neo4J are Databases being used by students developers in last 3 years.</li>
-                        </ol>
-                    </p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                        Mr. Mort's Period 1 CSP Class Table 1<br><br>
+                        Kiruthic Selvakumar<br><br>
+                        Rohan Bojja<br><br>
+                        Tarun Rayavarapu<br><br>
+                        Arhaan Memon<br><br>
+                        Derek Kang<br><br>
+                        Aadi Bhat<br><br>
+                        Aaditya Taleppady
+                    </p>                    
+                    <a href="https://kiruthic-selvakumar.github.io/travel_frontend/about/" class="btn btn-primary">Check out our About Us!</a>
                     </div>
                 </div>
             </div>
