--- a/templates/index.html
+++ b/templates/index.html
@@ -4,68 +4,66 @@
 {% block body %}
     <!-- Start of body content specific to page -->
     <div class="px-5 py-5 mx-auto">
-        <h1 class="text-white"><strong>InterTravel Backend</strong></h1>
+        <h1 class="text-white"><strong>Viralize Backend</strong></h1>
         <div class="row">
             <div class="col-4">
                 <div class="card">
-                    <img class="card-img-top" src="{{ url_for('static', filename='assets/airplane.jpg') }}" alt="Python Development" height="350">
+                    <img class="card-img-top" src="{{ url_for('static', filename='assets/airplane.jpg') }}" alt="Social Media Analytics" height="350">
                     <div class="card-body">
-                    <h5 class="card-title">What are the features of <mark>InterTravel?</mark>?</h5>
+                    <h5 class="card-title">What is <mark>Viralize</mark>?</h5>
                     <p class="card-text">
                         <ol>
-                            <li>Wellness Waypoints</li>
-                            <li>Lodging Listings</li>
-                            <li>Activity Planner</li>
-                            <li>Packing Portal</li>
-                            <li>Cuisine Chronicles</li>
-                            <li>Fair Fares</li>
-                            <li>Budget Brilliance</li>
+                            <li>Post Analytics Dashboard</li>
+                            <li>Platform-Based Tracking</li>
+                            <li>Content Optimization</li>
+                            <li>Cross-Platform Posting</li>
+                            <li>Real-Time Feedback</li>
+                            <li>Admin Insights</li>
                         </ol>
                     </p>
-                    <a class="btn btn-primary" href="https://kiruthic-selvakumar.github.io/travel_frontend/">Check them out!</a>
+                    <a class="btn btn-primary" href="https://luojonah.github.io/palomarhealth_frontend/">Explore Viralize</a>
                     </div>
                 </div>
             </div>
             <div class="col-4">
                 <div class="card">
-                    <img class="card-img-top" src="{{ url_for('static', filename='assets/traveler.jpg') }}" alt="Flask Development" height="350">
+                    <img class="card-img-top" src="{{ url_for('static', filename='assets/traveler.jpg') }}" alt="Project Details" height="350">
                     <div class="card-body">
-                    <h5 class="card-title">Where can I find more about <mark>InterTravel</mark>?</h5>
+                    <h5 class="card-title">What is the goal of <mark>Viralize</mark>?</h5>
                     <p class="card-text">
-                        InterTravel branched off Flocker, a social media website designed last trimester. Intertravel's purpose is to make international travel procedures simpler and more accessible. To provide users with a detailed and user-friendly tool that offers insights into various elements of planning travel or vacation, including destination activities, food, hotels, transportation, budget, packing, and healthcare, enabling them to make informed decisions.
+                        Viralize is a social media analytics platform designed for Palomar Health. Its goal is to help visualize and analyze social media performance across platforms like Instagram, Twitter, Facebook, and LinkedIn. 
+                        By offering real-time insights into post reach, engagement, and content types, Viralize empowers healthcare professionals to spread health education more effectively.
 
-                        Below are links to our backend and frontend repositories, along with our Kanban board for project management.<br><br>
-                        
-                        <strong>Here is our Backend Repository:</strong> <a href="https://github.com/Kiruthic-Selvakumar/travel_backend" target="_blank">GitHub Backend Repo</a><br><br>
-                        
-                        <strong>Here is our Frontend Repository:</strong> <a href="https://github.com/Kiruthic-Selvakumar/travel_frontend" target="_blank">GitHub Frontend Repo</a><br><br>
-                        
-                        <strong>Here is our Kanban Board where we documented our development process:</strong> <a href="https://github.com/users/Kiruthic-Selvakumar/projects/2" target="_blank">Project Kanban Board</a><br><br>
+                        <br><br><strong>Backend Repository:</strong> 
+                        <a href="https://github.com/luojonah/palomarhealth_backend" target="_blank">GitHub Backend Repo</a><br><br>
+
+                        <strong>Frontend Repository:</strong> 
+                        <a href="https://github.com/luojonah/palomarhealth_frontend" target="_blank">GitHub Frontend Repo</a><br><br>
+
+                        <strong>Project Kanban Board:</strong> 
+                        <a href="https://github.com/users/luojonah/projects/3" target="_blank">GitHub Project Board</a><br><br>
                     </p>                    
-                    <a class="btn btn-primary" href="https://kiruthic-selvakumar.github.io/travel_frontend/">Check the final website out!</a>
+                    <a class="btn btn-primary" href="https://luojonah.github.io/palomarhealth_frontend/">Try the Platform</a>
                     </div>
                 </div>
             </div>
             <div class="col-4">
                 <div class="card">
-                    <img class="card-img-top" src="{{ url_for('static', filename='assets/hotel.jpg') }}" alt="Backend and Persistence" height="350">
+                    <img class="card-img-top" src="{{ url_for('static', filename='assets/hotel.jpg') }}" alt="Team Members" height="350">
                     <div class="card-body">
-                    <h5 class="card-title">Who created <mark>Intertravel</mark>?</h5>
+                    <h5 class="card-title">Who built <mark>Viralize</mark>?</h5>
                     <p class="card-text">
-                        Mr. Mort's Period 1 CSP Class Table 1<br><br>
-                        Kiruthic Selvakumar<br><br>
-                        Rohan Bojja<br><br>
-                        Tarun Rayavarapu<br><br>
-                        Arhaan Memon<br><br>
-                        Derek Kang<br><br>
-                        Aadi Bhat<br><br>
-                        Aaditya Taleppady
+                        Mr. Mort's Period 5 CSP Class Table 1<br><br>
+                        Jonah Luo<br>
+                        Akshaj Gurgubelli<br>
+                        Arya Savlani<br>
+                        Tarun Rayavarapu<br>
+                        Justin Quach
                     </p>                    
-                    <a href="https://kiruthic-selvakumar.github.io/travel_frontend/about/" class="btn btn-primary">Check out our About Us!</a>
+                    <a href="https://luojonah.github.io/palomarhealth_frontend/about/" class="btn btn-primary">About the Team</a>
                     </div>
                 </div>
             </div>
-            
         </div>
     </div>
 {% endblock %}
